--- a/coffee.css
+++ b/coffee.css
@@ -1,19 +1,24 @@
+*{
+    margin: 0px;
+    padding: 0%;
+}
 body{
     background-color: rgb(254, 229, 233);
     /* margin: 40px; */
-    width: 80%;
+    width: 100%;
 }
 .box{
     margin-left: 10%;
     margin-right: 10%;
     margin-top: 5%;
     margin-bottom: 5%;
+    background-color: #45061e;
 }
 .header{
     display: flex;
     justify-content: space-between;
     background-color: #45061e;
-    width: 1050px;
+    width: 100%;
 }
 .h1{
     color: #fff;
@@ -31,12 +36,16 @@ a{
     text-decoration: none;
     margin: 20px;
 }
+a:hover{
+    color: #e89510;
+}
 .main{
     display: flex;
     justify-content: space-between;
     background-color: #45061e;
     height: 500px;
-    width: 1050px;
+    /* width: 1050px; */
+    width: 100%;
     /* margin: 0%; */
     /* padding: 0%; */
 }
@@ -47,13 +56,19 @@ a{
     color: #e89510;
     font-size: 30px;
     padding-top: 60px;
+    margin-top: 30px;
+    margin-bottom: 30px;
 }
 .p2{
     color: #fff;
     font-size: 30px;
+    margin-top: 30px;
+    margin-bottom: 30px;
 }
 .p3{
     color: #ffffffc5;
+    margin-top: 16px;
+    margin-bottom: 16px;
 }
 .p1, .p2, .p3{
     padding-left: 60px;
@@ -61,10 +76,18 @@ a{
 .on{
     color: #45061e;
     background-color: #e89510;
+    border: 2px solid #e89510;
     border-radius: 20px;
     padding: 10px;
+    font-weight: 550;
     text-align: center;
     width: 120px;
+    cursor: pointer;
+}
+.on:hover{
+    background-color: #4d4b4b;
+    color: #fff;
+    border: 2px solid #4d4b4b;
 }
 .io{
     padding-left: 60px;
@@ -72,14 +95,29 @@ a{
 .cu{
     background-color: #45061e;
     color: #fff;
-    border-color: #fff;
+    border: 2px solid #fff;
     border-radius: 20px;
     padding: 10px;
+    /* font-weight: 550; */
     text-align: center;
     width: 120px;
+    cursor: pointer;
+}
+.cu:hover{
+    /* color: #4d4b4b; */
+    background-color: #4d4b4b;
+    /* border: 2px solid #4d4b4b; */
 }
 img{
     width: 400px;
-    padding-right: 120px;
+    padding-right: 100px;
     padding-top: 40px;
+}
+@media (min-width:320px) and (max-width:1024px){
+    img{
+        width: 300px;
+        padding-right: 40px;
+        padding-top: 70px;
+    }
+
 }
